--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "Your Account Token",
-"id": "Your Account Id",
+"token": "Nzk3NDUyODQ5NTc5Njg4MDE4.G61n1J.3MlBuuzB6K4l4kTL6acPiefaA7Uh461A7yyNC4",
+"id": "797452849579688018",
 "stats": "STREAMING",
-"text": "Type Any text",
-"text2": "Type Any text",
-"idvc": "Type Voice Id" 
+"text": "GURGA Y bram UP",
+"text2": "1005949588231962715",
+"idvc": "" 
 }
