--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
 "id": "797452849579688018",
 "stats": "STREAMING",
 "text": "GURGA Y bram UP",
-"text2": "1005949588231962715",
-"idvc": "" 
+"text2": "WTx UP",
+"idvc": "1005949588231962715" 
 }
