--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 "token": "Nzk3NDUyODQ5NTc5Njg4MDE4.G61n1J.3MlBuuzB6K4l4kTL6acPiefaA7Uh461A7yyNC4",
 "id": "797452849579688018",
 "stats": "STREAMING",
-"text": "GURGA Y bram UP",
+"text": "TALABANI Y bram UP",
 "text2": "WTx UP",
 "idvc": "1005949588231962715" 
 }
