--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "Nzk3NDUyODQ5NTc5Njg4MDE4.G61n1J.3MlBuuzB6K4l4kTL6acPiefaA7Uh461A7yyNC4",
+"token": "MzMxMTMyNTc4MDkyNDE3MDI2.G2sbHS.AYf0r6VcJ6e4GNuF53DdTG8toGmy1dqb6DQQvk",
 "id": "797452849579688018",
 "stats": "STREAMING",
 "text": "TALABANI Y bram UP",
