--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "MzMxMTMyNTc4MDkyNDE3MDI2.G2sbHS.AYf0r6VcJ6e4GNuF53DdTG8toGmy1dqb6DQQvk",
-"id": "331132578092417026",
+"token": "ODkyMzc3NTAzMTE5ODQzMzg4.GD8B9u.5RQuZxCAp6yinulBDTLepwSJYptsp2vXE0Uoa0",
+"id": "892377503119843388",
 "stats": "STREAMING",
-"text": "TALABANI Y bram UP",
-"text2": "WTx UP",
-"idvc": "1005949588231962715" 
+"text": "LG UP",
+"text2": "G̷ U̷ R̷ G̷ A̷ UP",
+"idvc": "944191121746178059" 
 }
