--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
 "id": "892377503119843388",
 "stats": "STREAMING",
 "text": "LG UP",
-"text2": "G̷ U̷ R̷ G̷ A̷ UP",
+"text2": "LG Up LEGEND GAMING Up",
 "idvc": "944191121746178059" 
 }
