--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "ODkyMzc3NTAzMTE5ODQzMzg4.GCGCGv.rhm9ljory_0fH5_bB1z8aNgAPfRLq4ekc1ucT4",
+"token": "",
 "id": "892377503119843388",
 "stats": "STREAMING",
 "text": "LG UP",
