--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "",
-"id": "892377503119843388",
+"token": "TOKEN",// token lera dane
+"id": "id acc",// id account akay xot lera dane
 "stats": "STREAMING",
-"text": "LG UP",
-"text2": "LG Up LEGEND GAMING Up",
-"idvc": "944191121746178059" 
+"text": "Create By GURGA", // dastkari awa maka project a tek ache
+"text2": "شتێک بۆ ژێر ناوەکەی", // awayan dastkari bka ba dle xot shtek dane
+"idvc": "copy id voice aka" // id voice aka lera dane
 }
